[tool.poetry]
name = "zenity"
version = "0.1.0"
description = ""
authors = ["Zenity <hello@zenity.io>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.8.0"
flake8-mutable = "^1.2.0"
pep8-naming = "^0.12.1"
flake8-pytest-style = "^1.6.0"
flake8-simplify = "^0.15.1"
assertpy = "^1.1"
nextmock = "^0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
